<resources>
    <string name="app_name">Photo Catalog</string>

    <string name="label_confidence">Confidence: %s</string>
    <string name="label_id">ID: %s</string>

    <string name="cd_photo_image">Photo content</string>
    <string name="cd_force_sync">Force Synchronization</string>
    <string name="cd_favorite">Mark as Favorite</string>

    <string name="status_offline_mode">Offline Mode - Showing Cached Data</string>

    <string name="placeholder_large_image">Large Image Here</string>

    <string name="status_updated_just_now">Updated just now</string>
    <string name="status_online_format">Last update: %1$d min ago. Next auto-sync in: %2$d min</string>
    <string name="status_offline_format">Offline Mode. Data might be outdated. Last update: %s</string>
    <string name="status_syncing">Updating catalog...</string>
    <string name="label_never">Never</string>
</resources>